--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!-- 
    Imago, 2018, Henry Jack. All rights reserved. 
    Login/Signup form originally made by Andy Tran, edited by Henry Jack 
-   Some code used from w3schools, edited by Henry Jack 
+   Some code used from w3schools & stackoverflow edited by Henry Jack 
 -->
+
   <!DOCTYPE html>
   <html lang="en">
      <head>
@@ -23,6 +24,7 @@
         <link href="style.css" rel="stylesheet">
      </head>
      <body>
+
         <!-- Navbar -->
         <nav class="navbar navbar-expand-custom navbar-light">
            <a class="navbar-brand" href="#"><img style="width: 82px; height: 25px;" src="assets/im1c.png"/></a>
@@ -35,11 +37,11 @@
                     <i class="fas fa-home"></i><a class="nav-link ultext" href="#" onclick="toggleHome()">&nbsp;Home</a>
                  </li>
                  <li class="nav-item">
-                    <i class="fas fa-user user-icon"></i><a href="#" class="nav-link ultext" onclick="displayImages()">&nbsp;Sign Up/Login</a>
+                    <i class="fas fa-user user-icon"></i><a href="#" class="nav-link ultext" onclick="displayConnect()">&nbsp;Sign Up/Login</a>
                  </li>
                  <li class="nav-item">
                     <div class="upload-class">
-                       <i class="fas fa-cloud-upload-alt upload-icon"></i><a class="nav-link" href="#">&nbsp;Upload image</a>
+                       <i class="fas fa-cloud-upload-alt upload-icon"></i><a href="#" class="nav-link" onclick="displayUpload()">&nbsp;Upload image</a>
                  </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
@@ -48,10 +50,9 @@
               </form>
               </div>
            </div>
-        </nav>
-        <br>
-        <div class="bottomnavmargin"></div>
-        <div id="displaylogin" class="collapse">
+        </nav><br><div class="bottomnavmargin"></div>
+
+        <div id="displayconnect" class="collapse">
            <div class="connect-master">
               <div class="container-fluid">
                  <div class="form">
@@ -77,16 +78,32 @@
                  </div>
               </div>
            </div>
-           <a style="text-decoration: none" href="#" onclick="displayImages()"class="close2">&times;</a>
+           <a style="text-decoration: none" href="#" onclick="toggleHome()" class="close2">&times;</a>
         </div>
+
+        <div id="displayupload" class="collapse">
+                <div class="connect-master">
+                   <div class="container-fluid">
+                      <div class="form">
+                         <div class="container">
+                            <div class="info">
+                               <h1>Upload</h1>
+                            </div>
+                         </div>
+                      </div>
+                   </div>
+                </div>
+                <a style="text-decoration: none" href="#" onclick="toggleHome()" class="close2">&times;</a>
+             </div>
+
         <div id="allimagescontainer">
            <!-- Trending and New Tab -->
            <div class="tab">
               <button class="tablinks fadeInUp" onclick="openTabType(event, 'Trending-TabType')" id="defaultOpen">Trending</button>
               <button class="tablinks fadeInUp" onclick="openTabType(event, 'New-TabType')">New</button>
            </div>
-           <div class="bottomtabsmargin"></div>
-           <br>
+           <div class="bottomtabsmargin"></div><br>
+
            <!-- New images -->
            <div id="New-TabType" class="tabcontent">
               <h3 class="tabtitle fadeInDown">New Images</h3>
@@ -122,6 +139,7 @@
                  </div>
               </div>
            </div>
+
            <!-- Trending images -->
            <div id="Trending-TabType" class="tabcontent">
               <h3 class="tabtitle fadeInDown">Trending Images</h3>
@@ -161,6 +179,7 @@
               </div>
            </div>
         </div>
+
      </body>
   </html>
   <script src="script.js"></script>
