--- a/index.html
+++ b/index.html
@@ -58,15 +58,22 @@
                  <div class="form">
                     <div class="container">
                        <div class="info">
-                          <h1 class="typetitle">Login to Imago</h1>
+                          <h1 class="typetitle">Connect to Imago</h1>
                        </div>
                     </div>
                     <form class="formconnect register-form">
-                       <input type="text" placeholder="email address"/>  
-                       <input type="text" placeholder="username"/>
-                       <input type="password" placeholder="password" id="register-pass"/>
-                       <div class="showpass-area showpassicon"><i class="fas fa-eye"></i>&nbsp;Show Password</div>
-                       <button class="cb">Register</button>
+                        <div id="tos-agreehide"><label id="register-reqs" class="container-chbox"><input type="checkbox" id="reg-agreetos">
+                            <span class="checkmark-chbox"></span><p id="tosagree-text">I agree to the <a href="/privacy/">TOS</a></p>
+                        </label></div>
+                        <div id="hideonregister">
+                            <input type="text" placeholder="email address" id="reg-email"/>  
+                            <input type="text" placeholder="username" id="reg-username"/>
+                            <input type="password" placeholder="password" id="reg-pass"/>
+                            <div class="showpass-area showpassicon"><i class="fas fa-eye"></i>&nbsp;Show Password</div>
+                        </div>
+                       <button id="register1" class="cb" onclick="registerUserStart()">Register</button>
+                       <button id="register2" class="cb" onclick="registerUserFinish()">Register</button>
+                       <a id="reg-goback" class="message2" href="#" onclick="registerGoBack()">&#8592; Go back</a>
                        <p class="message">Already registered? <a class="tct" href="#">Sign In</a></p>
                     </form>
                     <form class="formconnect login-form">
