--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@
                        </div>
                     </div>
                     <form class="formconnect register-form">
-                        <div id="tos-agreehide"><label id="register-reqs" class="container-chbox"><input type="checkbox" id="reg-agreetos">
-                            <span class="checkmark-chbox"></span><p id="tosagree-text">I agree to the <a href="/privacy/">TOS</a></p>
-                        </label><br><br><p id="regerror-4">You must agree to the Terms of Service.</p></div>
+                        <div id="tos-agreehide"><br>
+                            <label class="toscontainer">I agree to the <a href="terms">Terms of Service</a>
+                                <input type="checkbox" id="reg-agreetos">
+                                <span class="checkmark"></span>
+                            </label>
+                        <p id="regerror-4">You must agree to the Terms of Service.</p></div>
                         <div id="hideonregister">
                             <input type="text" placeholder="email address" id="reg-email"/>  
                             <input type="text" placeholder="username" id="reg-username"/>
