error handling in upload

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
                     <div class="upload-area">
                         <div id="preview"></div><br>
                     </div>
+                    <p id="uplerror-1">&bull;&nbsp;You may only upload one image</p>
+                    <p id="uplerror-2">&bull;&nbsp;You have no images to remove!</p>
+                    <p id="uplerror-3">&bull;&nbsp;You may only upload .PNG, .JPG, .JPEG</p>
                     <button class="upload-btn">Upload</button>     
                 </div>           
                 <a style="text-decoration: none" href="#" onclick="toggleHome()" class="close2">&times;</a>
